<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pocetni"
            android:icon="@drawable/home"
            android:title="@string/Pocetna" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/island"
            android:title="@string/Krk" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/island"
            android:title="@string/Cres" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/island"
            android:title="@string/Losinj" />
        <item
            android:id="@+id/nav_fragment_item"
            android:icon="@drawable/island"
            android:title="@string/Rab" />
        <item
            android:id="@+id/nav_fragment_fk"
            android:icon="@drawable/discussion"
            android:title="@string/action_forumkrk" />
        <item
            android:id="@+id/nav_fragment_fc"
            android:icon="@drawable/discussion"
            android:title="@string/action_forumcres" />
        <item
            android:id="@+id/nav_fragment_fl"
            android:icon="@drawable/discussion"
            android:title="@string/action_forumlosinj" />
        <item
            android:id="@+id/nav_fragment_fr"
            android:icon="@drawable/discussion"
            android:title="@string/action_forumrab" />

    </group>
</menu>