<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.item.RabFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="219dp">

        <!-- Sadržaj koji želite prikazati unutar scroll view-a -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Dodajte svoje elemente ovdje -->

            <ImageView
                android:layout_width="356dp"
                android:layout_height="280dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rab"/>

            <TextView
                android:id="@+id/text_rab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/rab_opis"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/black"  />

            <TextView
                android:id="@+id/text_home2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/krk_prijevoz"
                android:letterSpacing="0.15"
                android:textStyle="bold|italic"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="28sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnkrk1"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/car"
                    android:foreground="@drawable/car"/>

                <Button
                    android:id="@+id/btnkrk2"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/bus"
                    android:foreground="@drawable/bus"/>


                <Button
                    android:id="@+id/btnkrk4"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/boat"
                    android:foreground="@drawable/boat" />

            </LinearLayout>
            <TextView
                android:id="@+id/text_home3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/razmak"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="28sp"
                />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>