<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="219dp">

        <!-- Sadržaj koji želite prikazati unutar scroll view-a -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Dodajte svoje elemente ovdje -->

            <ImageView
                android:layout_width="356dp"
                android:layout_height="280dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/otok_krk"/>

            <TextView
                android:id="@+id/text_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/krk_opis"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.69" />

            <TextView
                android:id="@+id/text_home2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/krk_prijevoz"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:letterSpacing="0.15"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.69" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnkrk1"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:backgroundTint="@color/white"
                    android:foreground="@drawable/car" />

            <Button
                android:id="@+id/btnkrk2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/white"
                android:foreground="@drawable/bus"/>

                <Button
                    android:id="@+id/btnkrk3"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginRight="20dp"
                    android:backgroundTint="@color/white"
                    android:foreground="@drawable/airplane" />

            <Button
                android:id="@+id/btnkrk4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:backgroundTint="@color/white"
                android:foreground="@drawable/boat" />

        </LinearLayout>
            <TextView
                android:id="@+id/text_home3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/razmak"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.69"
                />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>